--- a/components/card/section-cards.module.css
+++ b/components/card/section-cards.module.css
@@ -36,7 +36,7 @@
 }
 
 .cardImg:hover {
-  z-index: 99;
+  z-index: 50;
 }
 
 @media (min-width: 768px) {
